[package]
name = "unlock_music"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
hex-literal = "0.3"
itertools = "0.9"

[dev-dependencies]

[features]
default = []
